tests/unit/errors/test6.js
// If sin llave inicial
if(true)
	console.log(1);
}